<resources>
    <string name="app_name">Skufar</string>

    <!-- Menu Drawer Strings -->
    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="acc_sign_up">Регистрация</string>
    <string name="acc_sign_in">Вход</string>
    <string name="acc_sign_out">Выход</string>
    <string name="open_driver">Open</string>
    <string name="close_driver">Close</string>

    <!-- Sign Dialog Strings -->
    <string name="email_hint">Адрес электронной почты</string>
    <string name="password_hint">Пароль</string>
    <string name="sign_in_action">Войти</string>
    <string name="sign_up_action">Зарегестрироваться</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_in_error">Регистрация прошла неуспешно</string>
    <string name="sign_in_success">Регистрация прошла успешно</string>
</resources>